horizontal scrollable bar fix, sorting icons in next line

--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -182,7 +182,6 @@ main .table-container .table-wrapper .table.no-border.block {
 
 .report.table-container .table.block {
   width: 100%;
-  overflow-x: auto;
 }
 
 .report.table-container .table.block table {
